--- a/packages/smui-theme/package.json
+++ b/packages/smui-theme/package.json
@@ -30,6 +30,7 @@
   },
   "license": "Apache-2.0",
   "devDependencies": {
+    "@smui-extra/accordion": "^6.0.0-beta.6",
     "@smui-extra/autocomplete": "^6.0.0-beta.6",
     "@smui-extra/badge": "^6.0.0-beta.6",
     "@smui/banner": "^6.0.0-beta.6",
