--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -3,6 +3,7 @@
   "version": "6.0.0-beta.11",
   "description": "Svelte Material UI - Common",
   "type": "module",
+  "svelte": "./dist/index.js",
   "exports": {
     "./package.json": "./package.json",
     ".": "./dist/index.js",
