--- a/packages/menu-surface/package.json
+++ b/packages/menu-surface/package.json
@@ -3,7 +3,9 @@
   "version": "6.0.0-beta.11",
   "description": "Svelte Material UI - Menu Surface",
   "type": "module",
+  "main": "dist/index.js",
   "module": "dist/index.js",
+  "svelte": "dist/index.js",
   "types": "src/index.ts",
   "keywords": [
     "svelte",
