--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "bootstrap": "lerna bootstrap --hoist --nohoist \"@tsconfig/svelte\"",
-    "check": "lerna exec svelte-check",
+    "check": "lerna exec 'svelte-check --ignore \"dist\"'",
     "clean": "lerna run clean",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. .",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
