fix: update sveltekit and fix package.json
Fixes #425.

--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -4,15 +4,16 @@
   "description": "SMUI Website (You're not meant to install this.)",
   "type": "module",
   "scripts": {
-    "dev": "NODE_OPTIONS=\"--experimental-json-modules\" svelte-kit dev",
+    "dev": "svelte-kit dev",
     "build": "svelte-kit build",
-    "clean": "test -d .svelte-kit && rm -r .svelte-kit || true",
+    "package": "svelte-kit package",
     "preview": "svelte-kit preview",
-    "prepare": "npm run smui-theme-light && npm run smui-theme-dark && npm run site-light && npm run site-dark",
+    "prepare": "svelte-kit sync && npm run smui-theme-light && npm run smui-theme-dark && npm run site-light && npm run site-dark",
     "smui-theme-light": "smui-theme compile static/smui.css -s expanded -i src/theme -i node_modules/",
     "smui-theme-dark": "smui-theme compile static/smui-dark.css -s expanded -i src/theme/dark -i node_modules/",
     "site-light": "sass --no-source-map -I src/theme -I node_modules -I ../smui-theme/node_modules -I ../../node_modules src/site.scss static/site.css",
     "site-dark": "sass --no-source-map -I src/theme/dark -I node_modules -I ../smui-theme/node_modules -I ../../node_modules src/site.scss static/site-dark.css",
+    "clean": "test -d .svelte-kit && rm -r .svelte-kit || true",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "publishConfig": {
@@ -38,7 +39,7 @@
     "@material/theme": "^13.0.0",
     "@material/top-app-bar": "^13.0.0",
     "@material/typography": "^13.0.0",
-    "@mdi/js": "^6.5.95",
+    "@mdi/js": "^6.6.96",
     "@smui-extra/accordion": "^6.0.0-beta.16",
     "@smui-extra/autocomplete": "^6.0.0-beta.16",
     "@smui-extra/badge": "^6.0.0-beta.16",
@@ -80,18 +81,18 @@
     "@smui/tooltip": "^6.0.0-beta.16",
     "@smui/top-app-bar": "^6.0.0-beta.16",
     "@smui/touch-target": "^6.0.0-beta.16",
-    "@sveltejs/adapter-static": "^1.0.0-next.28",
-    "@sveltejs/kit": "^1.0.0-next.291",
-    "highlight.js": "^11.4.0",
+    "@sveltejs/adapter-static": "^1.0.0-next.29",
+    "@sveltejs/kit": "^1.0.0-next.310",
+    "highlight.js": "^11.5.1",
     "highlightjs-svelte": "^1.0.6",
     "mdsvex": "^0.10.5",
     "remark-slug": "^7.0.1",
-    "sass": "^1.49.9",
+    "sass": "^1.50.0",
     "smui-theme": "^6.0.0-beta.16",
-    "svelte-preprocess": "^4.10.4",
+    "svelte-preprocess": "^4.10.5",
     "tinygesture": "^1.1.4",
     "tslib": "^2.3.1",
-    "typescript": "^4.6.2",
-    "vite": "^2.8.6"
+    "typescript": "^4.6.3",
+    "vite": "^2.9.1"
   }
 }
