fix: upgrade packages and fix issues with new versions

--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -4,11 +4,11 @@
   "description": "SMUI Website (You're not meant to install this.)",
   "type": "module",
   "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build && npm run rename-md",
+    "dev": "vite dev",
+    "build": "vite build && npm run rename-md",
     "rename-md": "cd build && mv INSTALL.mdindex.html INSTALL.md.html && mv MIGRATING.mdindex.html MIGRATING.md.html && mv REPL.mdindex.html REPL.md.html && mv SVELTEKIT.mdindex.html SVELTEKIT.md.html && mv THEMING.mdindex.html THEMING.md.html && cd ..",
     "package": "svelte-kit package",
-    "preview": "svelte-kit preview",
+    "preview": "vite preview",
     "prepare": "svelte-kit sync && npm run smui-theme-light && npm run smui-theme-dark && npm run site-light && npm run site-dark",
     "smui-theme-light": "smui-theme compile static/smui.css -s expanded -i src/theme -i node_modules/",
     "smui-theme-dark": "smui-theme compile static/smui-dark.css -s expanded -i src/theme/dark -i node_modules/",
@@ -82,18 +82,18 @@
     "@smui/tooltip": "^6.0.0-beta.16",
     "@smui/top-app-bar": "^6.0.0-beta.16",
     "@smui/touch-target": "^6.0.0-beta.16",
-    "@sveltejs/adapter-static": "^1.0.0-next.29",
-    "@sveltejs/kit": "^1.0.0-next.310",
-    "highlight.js": "^11.5.1",
+    "@sveltejs/adapter-static": "^1.0.0-next.38",
+    "@sveltejs/kit": "^1.0.0-next.391",
+    "highlight.js": "^11.6.0",
     "highlightjs-svelte": "^1.0.6",
-    "mdsvex": "^0.10.5",
+    "mdsvex": "^0.10.6",
     "remark-slug": "^7.0.1",
-    "sass": "^1.50.0",
+    "sass": "^1.53.0",
     "smui-theme": "^6.0.0-beta.16",
-    "svelte-preprocess": "^4.10.5",
-    "tinygesture": "^1.1.4",
-    "tslib": "^2.3.1",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.1"
+    "svelte-preprocess": "^4.10.7",
+    "tinygesture": "^2.0.0",
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.4",
+    "vite": "^3.0.2"
   }
 }
