--- a/lerna.json
+++ b/lerna.json
@@ -2,13 +2,9 @@
   "version": "6.0.0-beta.16",
   "command": {
     "version": {
-      "allowBranch": [
-        "master"
-      ],
+      "allowBranch": ["master"],
       "conventionalCommits": true
     }
   },
-  "packages": [
-    "packages/*"
-  ]
+  "packages": ["packages/*"]
 }
