--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "bootstrap": "lerna bootstrap --hoist --nohoist \"@tsconfig/svelte\"",
     "check": "lerna exec 'svelte-check --ignore \"dist\"'",
     "clean": "lerna run clean",
-    "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. .",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+    "lint": "prettier --check --plugin-search-dir=. .",
+    "format": "prettier --write --plugin-search-dir=. .",
     "pages": "npm run bootstrap && npm run pages:build && npm run pages:push",
     "pages:build": "cd packages/site && npm run build && cd ../..",
     "pages:push": "git add -f packages/site/build && git commit -m 'chore: update built files' && git push origin $(git subtree split --prefix packages/site/build master):gh-pages --force && git reset --hard HEAD^",
@@ -33,14 +33,14 @@
   },
   "license": "Apache-2.0",
   "devDependencies": {
-    "@commitlint/cli": "^16.2.3",
-    "@commitlint/config-conventional": "^16.2.1",
-    "husky": "^7.0.4",
-    "lerna": "^4.0.0",
-    "prettier": "~2.6.2",
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
+    "husky": "^8.0.1",
+    "lerna": "^5.2.0",
+    "prettier": "~2.7.1",
     "prettier-plugin-svelte": "^2.7.0",
-    "sass": "^1.50.0",
-    "svelte": "^3.47.0",
-    "svelte-check": "^2.6.0"
+    "sass": "^1.53.0",
+    "svelte": "^3.49.0",
+    "svelte-check": "^2.8.0"
   }
 }
