--- a/packages/site/tsconfig.json
+++ b/packages/site/tsconfig.json
@@ -1,10 +1,17 @@
 {
   "extends": "./.svelte-kit/tsconfig.json",
   "compilerOptions": {
+    "allowJs": true,
+    "checkJs": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "strict": true,
     /**
       Specific to SMUI.
       */
-    "noImplicitAny": true,
-    "strict": true
+    "noImplicitAny": true
   }
 }
