--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -40,7 +40,7 @@
     "@material/theme": "^13.0.0",
     "@material/top-app-bar": "^13.0.0",
     "@material/typography": "^13.0.0",
-    "@mdi/js": "^6.6.96",
+    "@mdi/js": "^7.0.96",
     "@smui-extra/accordion": "^6.0.0-beta.16",
     "@smui-extra/autocomplete": "^6.0.0-beta.16",
     "@smui-extra/badge": "^6.0.0-beta.16",
@@ -89,6 +89,7 @@
     "mdsvex": "^0.10.6",
     "remark-slug": "^7.0.1",
     "sass": "^1.53.0",
+    "simple-icons": "^7.4.0",
     "smui-theme": "^6.0.0-beta.16",
     "svelte-preprocess": "^4.10.7",
     "tinygesture": "^2.0.0",
