--- a/.prettierignore
+++ b/.prettierignore
@@ -5,6 +5,7 @@ package-lock.json
 dist
 .svelte-kit
 /.github
+packages/site/build
 /packages/site/static/smui.css
 /packages/site/static/smui-dark.css
 /packages/site/static/site.css
