--- a/.prettierignore
+++ b/.prettierignore
@@ -5,7 +5,8 @@ package-lock.json
 dist
 .svelte-kit
 /.github
-packages/site/build
+/lerna.json
+/packages/site/build
 /packages/site/static/smui.css
 /packages/site/static/smui-dark.css
 /packages/site/static/site.css
