--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "prepare": "husky install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "lint-staged": {
+    "*": "prettier --check --plugin-search-dir=."
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hperrin/svelte-material-ui.git"
@@ -37,6 +40,7 @@
     "@commitlint/config-conventional": "^17.0.3",
     "husky": "^8.0.1",
     "lerna": "^5.2.0",
+    "lint-staged": "^13.0.3",
     "prettier": "~2.7.1",
     "prettier-plugin-svelte": "^2.7.0",
     "sass": "^1.54.0",
