--- a/packages/site/tsconfig.json
+++ b/packages/site/tsconfig.json
@@ -14,4 +14,8 @@
       */
     "noImplicitAny": true
   }
+  // Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
+  //
+  // If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
+  // from the referenced tsconfig.json - TypeScript does not merge them in
 }
