--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -22,6 +22,7 @@
     "build:svelte": "svelte-strip strip src/ dist",
     "build:sass": "sass --no-source-map -I node_modules -I ../smui-theme/node_modules -I ../../node_modules _style.scss bare.css",
     "clean": "git status --ignored -u --porcelain . | grep -v node_modules/ | grep -e '^!! ' | sed 's/^!! packages\\/[a-z-]*\\///g' | tr '\\n' ' ' | xargs rm",
+    "check": "npx svelte-check --ignore dist",
     "prepare": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -50,6 +51,7 @@
     "@material/icon-button": "^13.0.0",
     "@tsconfig/svelte": "^3.0.0",
     "sass": "^1.54.0",
+    "svelte-check": "^2.8.1",
     "svelte-strip": "^1.0.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
