--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -91,6 +91,7 @@
     "sass": "^1.54.0",
     "simple-icons": "^7.7.0",
     "smui-theme": "^6.1.3",
+    "svelte-check": "^2.8.1",
     "svelte-preprocess": "^4.10.7",
     "tinygesture": "^2.0.0",
     "tslib": "^2.4.0",
