feat: update to mdc-web 14, implement new features and fixes

--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -30,16 +30,16 @@
   },
   "license": "Apache-2.0",
   "devDependencies": {
-    "@material/button": "^13.0.0",
-    "@material/circular-progress": "^13.0.0",
-    "@material/elevation": "^13.0.0",
-    "@material/image-list": "^13.0.0",
-    "@material/linear-progress": "^13.0.0",
-    "@material/ripple": "^13.0.0",
-    "@material/shape": "^13.0.0",
-    "@material/theme": "^13.0.0",
-    "@material/top-app-bar": "^13.0.0",
-    "@material/typography": "^13.0.0",
+    "@material/button": "^14.0.0",
+    "@material/circular-progress": "^14.0.0",
+    "@material/elevation": "^14.0.0",
+    "@material/image-list": "^14.0.0",
+    "@material/linear-progress": "^14.0.0",
+    "@material/ripple": "^14.0.0",
+    "@material/shape": "^14.0.0",
+    "@material/theme": "^14.0.0",
+    "@material/top-app-bar": "^14.0.0",
+    "@material/typography": "^14.0.0",
     "@mdi/js": "^7.0.96",
     "@smui-extra/accordion": "^6.1.4",
     "@smui-extra/autocomplete": "^6.2.0",
@@ -92,6 +92,7 @@
     "simple-icons": "^7.7.0",
     "smui-theme": "^6.2.0",
     "svelte-check": "^2.8.1",
+    "svelte-portal": "^2.2.0",
     "svelte-preprocess": "^4.10.7",
     "tinygesture": "^2.0.0",
     "tslib": "^2.4.0",
