feat: new bottom app bar component

--- a/packages/svelte-material-ui/package.json
+++ b/packages/svelte-material-ui/package.json
@@ -36,6 +36,7 @@
     "@smui-extra/accordion": "^6.1.4",
     "@smui-extra/autocomplete": "^6.2.0",
     "@smui-extra/badge": "^6.1.4",
+    "@smui-extra/bottom-app-bar": "^6.1.4",
     "@smui/banner": "^6.1.4",
     "@smui/button": "^6.1.4",
     "@smui/card": "^6.1.4",
