--- a/packages/bottom-app-bar/package.json
+++ b/packages/bottom-app-bar/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smui-extra/bottom-app-bar",
-  "version": "6.1.4",
+  "version": "7.0.0-beta.0",
   "description": "Svelte Material UI - Bottom App Bar",
   "type": "module",
   "main": "dist/index.js",
@@ -41,8 +41,8 @@
   "dependencies": {
     "@material/feature-targeting": "^14.0.0",
     "@material/theme": "^14.0.0",
-    "@smui/common": "^6.1.4",
-    "@smui/paper": "^6.1.4",
+    "@smui/common": "^7.0.0-beta.0",
+    "@smui/paper": "^7.0.0-beta.0",
     "svelte2tsx": "^0.5.12"
   },
   "devDependencies": {
