--- a/packages/select/package.json
+++ b/packages/select/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smui/select",
-  "version": "6.2.0",
+  "version": "7.0.0-beta.0",
   "description": "Svelte Material UI - Select",
   "type": "module",
   "svelte": "./dist/index.js",
@@ -60,14 +60,14 @@
     "@material/rtl": "^14.0.0",
     "@material/select": "^14.0.0",
     "@material/theme": "^14.0.0",
-    "@smui/common": "^6.1.4",
-    "@smui/floating-label": "^6.1.4",
-    "@smui/line-ripple": "^6.1.4",
-    "@smui/list": "^6.1.4",
-    "@smui/menu": "^6.2.0",
-    "@smui/menu-surface": "^6.1.4",
-    "@smui/notched-outline": "^6.1.4",
-    "@smui/ripple": "^6.1.4",
+    "@smui/common": "^7.0.0-beta.0",
+    "@smui/floating-label": "^7.0.0-beta.0",
+    "@smui/line-ripple": "^7.0.0-beta.0",
+    "@smui/list": "^7.0.0-beta.0",
+    "@smui/menu": "^7.0.0-beta.0",
+    "@smui/menu-surface": "^7.0.0-beta.0",
+    "@smui/notched-outline": "^7.0.0-beta.0",
+    "@smui/ripple": "^7.0.0-beta.0",
     "svelte2tsx": "^0.5.12"
   },
   "devDependencies": {
