--- a/packages/autocomplete/package.json
+++ b/packages/autocomplete/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smui-extra/autocomplete",
-  "version": "6.2.0",
+  "version": "7.0.0-beta.0",
   "description": "Svelte Material UI - Autocomplete",
   "type": "module",
   "main": "dist/index.js",
@@ -42,11 +42,11 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@smui/common": "^6.1.4",
-    "@smui/list": "^6.1.4",
-    "@smui/menu": "^6.2.0",
-    "@smui/menu-surface": "^6.1.4",
-    "@smui/textfield": "^6.1.4",
+    "@smui/common": "^7.0.0-beta.0",
+    "@smui/list": "^7.0.0-beta.0",
+    "@smui/menu": "^7.0.0-beta.0",
+    "@smui/menu-surface": "^7.0.0-beta.0",
+    "@smui/textfield": "^7.0.0-beta.0",
     "svelte2tsx": "^0.5.12"
   },
   "devDependencies": {
