--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smui/card",
-  "version": "6.1.4",
+  "version": "7.0.0-beta.0",
   "description": "Svelte Material UI - Card",
   "type": "module",
   "main": "dist/index.js",
@@ -40,10 +40,10 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/card": "^14.0.0",
-    "@smui/button": "^6.1.4",
-    "@smui/common": "^6.1.4",
-    "@smui/icon-button": "^6.1.4",
-    "@smui/ripple": "^6.1.4",
+    "@smui/button": "^7.0.0-beta.0",
+    "@smui/common": "^7.0.0-beta.0",
+    "@smui/icon-button": "^7.0.0-beta.0",
+    "@smui/ripple": "^7.0.0-beta.0",
     "svelte2tsx": "^0.5.12"
   },
   "devDependencies": {
