--- a/packages/checkbox/package.json
+++ b/packages/checkbox/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smui/checkbox",
-  "version": "6.1.4",
+  "version": "7.0.0-beta.0",
   "description": "Svelte Material UI - Checkbox",
   "type": "module",
   "main": "dist/index.js",
@@ -40,8 +40,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/checkbox": "^14.0.0",
-    "@smui/common": "^6.1.4",
-    "@smui/ripple": "^6.1.4",
+    "@smui/common": "^7.0.0-beta.0",
+    "@smui/ripple": "^7.0.0-beta.0",
     "svelte2tsx": "^0.5.12"
   },
   "devDependencies": {
