--- a/packages/icon-button/package.json
+++ b/packages/icon-button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smui/icon-button",
-  "version": "6.1.4",
+  "version": "7.0.0-beta.0",
   "description": "Svelte Material UI - Icon Button",
   "type": "module",
   "main": "dist/index.js",
@@ -41,8 +41,8 @@
   "dependencies": {
     "@material/density": "^14.0.0",
     "@material/icon-button": "^14.0.0",
-    "@smui/common": "^6.1.4",
-    "@smui/ripple": "^6.1.4",
+    "@smui/common": "^7.0.0-beta.0",
+    "@smui/ripple": "^7.0.0-beta.0",
     "svelte2tsx": "^0.5.12"
   },
   "devDependencies": {
