--- a/packages/line-ripple/package.json
+++ b/packages/line-ripple/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smui/line-ripple",
-  "version": "6.1.4",
+  "version": "7.0.0-beta.0",
   "description": "Svelte Material UI - Line Ripple",
   "type": "module",
   "main": "dist/index.js",
@@ -40,7 +40,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/line-ripple": "^14.0.0",
-    "@smui/common": "^6.1.4",
+    "@smui/common": "^7.0.0-beta.0",
     "svelte2tsx": "^0.5.12"
   },
   "devDependencies": {
