--- a/packages/list/package.json
+++ b/packages/list/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smui/list",
-  "version": "6.1.4",
+  "version": "7.0.0-beta.0",
   "description": "Svelte Material UI - List",
   "type": "module",
   "main": "dist/index.js",
@@ -42,8 +42,8 @@
     "@material/dom": "^14.0.0",
     "@material/feature-targeting": "^14.0.0",
     "@material/list": "^14.0.0",
-    "@smui/common": "^6.1.4",
-    "@smui/ripple": "^6.1.4",
+    "@smui/common": "^7.0.0-beta.0",
+    "@smui/ripple": "^7.0.0-beta.0",
     "svelte2tsx": "^0.5.12"
   },
   "devDependencies": {
