--- a/packages/snackbar/package.json
+++ b/packages/snackbar/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smui/snackbar",
-  "version": "6.1.4",
+  "version": "7.0.0-beta.0",
   "description": "Svelte Material UI - Snackbar",
   "type": "module",
   "svelte": "./dist/index.js",
@@ -54,10 +54,10 @@
     "@material/dom": "^14.0.0",
     "@material/feature-targeting": "^14.0.0",
     "@material/snackbar": "^14.0.0",
-    "@smui/button": "^6.1.4",
-    "@smui/common": "^6.1.4",
-    "@smui/icon-button": "^6.1.4",
-    "@smui/ripple": "^6.1.4",
+    "@smui/button": "^7.0.0-beta.0",
+    "@smui/common": "^7.0.0-beta.0",
+    "@smui/icon-button": "^7.0.0-beta.0",
+    "@smui/ripple": "^7.0.0-beta.0",
     "svelte2tsx": "^0.5.12"
   },
   "devDependencies": {
