--- a/packages/tab-bar/package.json
+++ b/packages/tab-bar/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smui/tab-bar",
-  "version": "6.1.4",
+  "version": "7.0.0-beta.0",
   "description": "Svelte Material UI - Tab Bar",
   "type": "module",
   "main": "dist/index.js",
@@ -40,9 +40,9 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/tab-bar": "^14.0.0",
-    "@smui/common": "^6.1.4",
-    "@smui/tab": "^6.1.4",
-    "@smui/tab-scroller": "^6.1.4",
+    "@smui/common": "^7.0.0-beta.0",
+    "@smui/tab": "^7.0.0-beta.0",
+    "@smui/tab-scroller": "^7.0.0-beta.0",
     "svelte2tsx": "^0.5.12"
   },
   "devDependencies": {
