--- a/packages/textfield/package.json
+++ b/packages/textfield/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smui/textfield",
-  "version": "6.1.4",
+  "version": "7.0.0-beta.0",
   "description": "Svelte Material UI - Text Field",
   "type": "module",
   "svelte": "./dist/index.js",
@@ -64,11 +64,11 @@
     "@material/ripple": "^14.0.0",
     "@material/rtl": "^14.0.0",
     "@material/textfield": "^14.0.0",
-    "@smui/common": "^6.1.4",
-    "@smui/floating-label": "^6.1.4",
-    "@smui/line-ripple": "^6.1.4",
-    "@smui/notched-outline": "^6.1.4",
-    "@smui/ripple": "^6.1.4",
+    "@smui/common": "^7.0.0-beta.0",
+    "@smui/floating-label": "^7.0.0-beta.0",
+    "@smui/line-ripple": "^7.0.0-beta.0",
+    "@smui/notched-outline": "^7.0.0-beta.0",
+    "@smui/ripple": "^7.0.0-beta.0",
     "svelte2tsx": "^0.5.12"
   },
   "devDependencies": {
