fix: update packages and fix issues

--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -40,7 +40,7 @@
     "@material/theme": "^14.0.0",
     "@material/top-app-bar": "^14.0.0",
     "@material/typography": "^14.0.0",
-    "@mdi/js": "^7.0.96",
+    "@mdi/js": "^7.2.96",
     "@smui-extra/accordion": "^7.0.0-beta.0",
     "@smui-extra/autocomplete": "^7.0.0-beta.0",
     "@smui-extra/badge": "^7.0.0-beta.0",
@@ -83,21 +83,21 @@
     "@smui/tooltip": "^7.0.0-beta.0",
     "@smui/top-app-bar": "^7.0.0-beta.0",
     "@smui/touch-target": "^7.0.0-beta.0",
-    "@sveltejs/adapter-static": "^1.0.0-next.39",
-    "@sveltejs/kit": "^1.0.0-next.428",
-    "highlight.js": "^11.6.0",
+    "@sveltejs/adapter-static": "^2.0.1",
+    "@sveltejs/kit": "^1.15.0",
+    "highlight.js": "^11.7.0",
     "highlightjs-svelte": "^1.0.6",
     "mdsvex": "^0.10.6",
-    "rehype-slug": "^5.0.1",
-    "sass": "^1.54.0",
-    "simple-icons": "^7.7.0",
+    "rehype-slug": "^5.1.0",
+    "sass": "^1.60.0",
+    "simple-icons": "^8.9.0",
     "smui-theme": "^7.0.0-beta.0",
-    "svelte-check": "^2.8.1",
+    "svelte-check": "^3.1.4",
     "svelte-portal": "^2.2.0",
-    "svelte-preprocess": "^4.10.7",
+    "svelte-preprocess": "^5.0.3",
     "tinygesture": "^2.0.0",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.4",
-    "vite": "^3.0.9"
+    "tslib": "^2.5.0",
+    "typescript": "^5.0.3",
+    "vite": "^4.2.1"
   }
 }
