--- a/lerna.json
+++ b/lerna.json
@@ -1,10 +1,14 @@
 {
-  "version": "7.0.0-beta.0",
+  "version": "7.0.0-beta.1",
   "command": {
     "version": {
-      "allowBranch": ["master"],
+      "allowBranch": [
+        "master"
+      ],
       "conventionalCommits": true
     }
   },
-  "packages": ["packages/*"]
+  "packages": [
+    "packages/*"
+  ]
 }
