--- a/packages/site/.gitignore
+++ b/packages/site/.gitignore
@@ -6,11 +6,5 @@ node_modules
 .env
 .env.*
 !.env.example
-/static/smui.css
-/static/smui-dark.css
-/static/smui-fixation.css
-/static/smui-fixation-dark.css
-/static/site.css
-/static/site-dark.css
-/static/site-fixation.css
-/static/site-fixation-dark.css
+/static/smui*.css
+/static/site*.css
