--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -9,17 +9,32 @@
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "prepare": "npm run prepare-smui && npm run prepare-site",
-    "prepare-smui": "npm run smui-theme-light && npm run smui-theme-dark && npm run smui-fixation-light && npm run smui-fixation-dark",
-    "prepare-site": "npm run site-light && npm run site-dark && npm run site-fixation-light && npm run site-fixation-dark",
+    "prepare": "npm run prepare-smui && npm run prepare-fixation && npm run prepare-material && npm run prepare-metro && npm run prepare-unity",
+    "prepare-smui": "npm run smui-theme-light && npm run smui-theme-dark && npm run site-light && npm run site-dark",
+    "prepare-fixation": "npm run smui-fixation-light && npm run smui-fixation-dark && npm run site-fixation-light && npm run site-fixation-dark",
+    "prepare-material": "npm run smui-material-light && npm run smui-material-dark && npm run site-material-light && npm run site-material-dark",
+    "prepare-metro": "npm run smui-metro-light && npm run smui-metro-dark && npm run site-metro-light && npm run site-metro-dark",
+    "prepare-unity": "npm run smui-unity-light && npm run smui-unity-dark && npm run site-unity-light && npm run site-unity-dark",
     "smui-theme-light": "smui-theme compile static/smui.css -s expanded -i src/theme -i node_modules/",
     "smui-theme-dark": "smui-theme compile static/smui-dark.css -s expanded -i src/theme/dark -i node_modules/",
     "smui-fixation-light": "smui-theme compile static/smui-fixation.css -s expanded -i src/theme/fixation -i node_modules/",
     "smui-fixation-dark": "smui-theme compile static/smui-fixation-dark.css -s expanded -i src/theme/fixation-dark -i node_modules/",
+    "smui-material-light": "smui-theme compile static/smui-material.css -s expanded -i src/theme/material -i node_modules/",
+    "smui-material-dark": "smui-theme compile static/smui-material-dark.css -s expanded -i src/theme/material-dark -i node_modules/",
+    "smui-metro-light": "smui-theme compile static/smui-metro.css -s expanded -i src/theme/metro -i node_modules/",
+    "smui-metro-dark": "smui-theme compile static/smui-metro-dark.css -s expanded -i src/theme/metro-dark -i node_modules/",
+    "smui-unity-light": "smui-theme compile static/smui-unity.css -s expanded -i src/theme/unity -i node_modules/",
+    "smui-unity-dark": "smui-theme compile static/smui-unity-dark.css -s expanded -i src/theme/unity-dark -i node_modules/",
     "site-light": "sass --no-source-map -I src/theme -I node_modules -I ../smui-theme/node_modules -I ../../node_modules src/site.scss static/site.css",
     "site-dark": "sass --no-source-map -I src/theme/dark -I node_modules -I ../smui-theme/node_modules -I ../../node_modules src/site.scss static/site-dark.css",
     "site-fixation-light": "sass --no-source-map -I src/theme/fixation -I node_modules -I ../smui-theme/node_modules -I ../../node_modules src/site.scss static/site-fixation.css",
     "site-fixation-dark": "sass --no-source-map -I src/theme/fixation-dark -I node_modules -I ../smui-theme/node_modules -I ../../node_modules src/site.scss static/site-fixation-dark.css",
+    "site-material-light": "sass --no-source-map -I src/theme/material -I node_modules -I ../smui-theme/node_modules -I ../../node_modules src/site.scss static/site-material.css",
+    "site-material-dark": "sass --no-source-map -I src/theme/material-dark -I node_modules -I ../smui-theme/node_modules -I ../../node_modules src/site.scss static/site-material-dark.css",
+    "site-metro-light": "sass --no-source-map -I src/theme/metro -I node_modules -I ../smui-theme/node_modules -I ../../node_modules src/site.scss static/site-metro.css",
+    "site-metro-dark": "sass --no-source-map -I src/theme/metro-dark -I node_modules -I ../smui-theme/node_modules -I ../../node_modules src/site.scss static/site-metro-dark.css",
+    "site-unity-light": "sass --no-source-map -I src/theme/unity -I node_modules -I ../smui-theme/node_modules -I ../../node_modules src/site.scss static/site-unity.css",
+    "site-unity-dark": "sass --no-source-map -I src/theme/unity-dark -I node_modules -I ../smui-theme/node_modules -I ../../node_modules src/site.scss static/site-unity-dark.css",
     "clean": "test -d .svelte-kit && rm -r .svelte-kit || true",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
