--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -5,16 +5,17 @@
   "type": "module",
   "scripts": {
     "dev": "vite dev",
-    "build": "vite build",
+    "build": "npm run theme && vite build",
     "preview": "vite preview",
+    "prepublish": "npm run build",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "prepare": "npm run prepare-smui && npm run prepare-fixation && npm run prepare-material && npm run prepare-metro && npm run prepare-unity",
-    "prepare-smui": "npm run smui-theme-light && npm run smui-theme-dark && npm run site-light && npm run site-dark",
-    "prepare-fixation": "npm run smui-fixation-light && npm run smui-fixation-dark && npm run site-fixation-light && npm run site-fixation-dark",
-    "prepare-material": "npm run smui-material-light && npm run smui-material-dark && npm run site-material-light && npm run site-material-dark",
-    "prepare-metro": "npm run smui-metro-light && npm run smui-metro-dark && npm run site-metro-light && npm run site-metro-dark",
-    "prepare-unity": "npm run smui-unity-light && npm run smui-unity-dark && npm run site-unity-light && npm run site-unity-dark",
+    "theme": "npm run theme-smui && npm run theme-fixation && npm run theme-material && npm run theme-metro && npm run theme-unity",
+    "theme-smui": "npm run smui-theme-light && npm run smui-theme-dark && npm run site-light && npm run site-dark",
+    "theme-fixation": "npm run smui-fixation-light && npm run smui-fixation-dark && npm run site-fixation-light && npm run site-fixation-dark",
+    "theme-material": "npm run smui-material-light && npm run smui-material-dark && npm run site-material-light && npm run site-material-dark",
+    "theme-metro": "npm run smui-metro-light && npm run smui-metro-dark && npm run site-metro-light && npm run site-metro-dark",
+    "theme-unity": "npm run smui-unity-light && npm run smui-unity-dark && npm run site-unity-light && npm run site-unity-dark",
     "smui-theme-light": "smui-theme compile static/smui.css -s expanded -i src/theme -i node_modules/",
     "smui-theme-dark": "smui-theme compile static/smui-dark.css -s expanded -i src/theme/dark -i node_modules/",
     "smui-fixation-light": "smui-theme compile static/smui-fixation.css -s expanded -i src/theme/fixation -i node_modules/",
@@ -104,21 +105,21 @@
     "@smui/tooltip": "^7.0.0-beta.8",
     "@smui/top-app-bar": "^7.0.0-beta.8",
     "@smui/touch-target": "^7.0.0-beta.8",
-    "@sveltejs/adapter-static": "^2.0.1",
-    "@sveltejs/kit": "^1.15.0",
-    "highlight.js": "^11.7.0",
+    "@sveltejs/adapter-static": "^2.0.2",
+    "@sveltejs/kit": "^1.20.4",
+    "highlight.js": "^11.8.0",
     "highlightjs-svelte": "^1.0.6",
     "mdsvex": "^0.10.6",
     "rehype-slug": "^5.1.0",
-    "sass": "^1.60.0",
-    "simple-icons": "^8.9.0",
+    "sass": "^1.63.4",
+    "simple-icons": "^9.2.0",
     "smui-theme": "^7.0.0-beta.8",
-    "svelte-check": "^3.1.4",
+    "svelte-check": "^3.4.3",
     "svelte-portal": "^2.2.0",
-    "svelte-preprocess": "^5.0.3",
+    "svelte-preprocess": "^5.0.4",
     "tinygesture": "^2.0.0",
-    "tslib": "^2.5.0",
-    "typescript": "^5.0.3",
-    "vite": "^4.2.1"
+    "tslib": "^2.5.3",
+    "typescript": "^5.1.3",
+    "vite": "^4.3.9"
   }
 }
