--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -38,7 +38,7 @@
     "build:svelte": "svelte-strip strip src/ dist",
     "clean": "git status --ignored -u --porcelain . | grep -v node_modules/ | grep -e '^!! ' | sed 's/^!! packages\\/[a-z-]*\\///g' | tr '\\n' ' ' | xargs rm",
     "check": "npx svelte-check --ignore dist",
-    "prepare": "npm run build",
+    "prepublish": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "publishConfig": {
@@ -55,14 +55,14 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/dom": "^14.0.0",
-    "svelte2tsx": "^0.6.10"
+    "svelte2tsx": "^0.6.15"
   },
   "devDependencies": {
     "@tsconfig/svelte": "^4.0.1",
-    "sass": "^1.60.0",
-    "svelte-check": "^3.1.4",
+    "sass": "^1.63.4",
+    "svelte-check": "^3.4.3",
     "svelte-strip": "^2.0.0",
-    "tslib": "^2.5.0",
-    "typescript": "^5.0.3"
+    "tslib": "^2.5.3",
+    "typescript": "^5.1.3"
   }
 }
