--- a/packages/segmented-button/package.json
+++ b/packages/segmented-button/package.json
@@ -23,7 +23,7 @@
     "build:sass": "sass --no-source-map -I node_modules -I ../smui-theme/node_modules -I ../../node_modules _style.scss bare.css",
     "clean": "git status --ignored -u --porcelain . | grep -v node_modules/ | grep -e '^!! ' | sed 's/^!! packages\\/[a-z-]*\\///g' | tr '\\n' ' ' | xargs rm",
     "check": "npx svelte-check --ignore dist",
-    "prepare": "npm run build",
+    "prepublish": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "publishConfig": {
@@ -42,14 +42,14 @@
     "@material/segmented-button": "^14.0.0",
     "@smui/common": "^7.0.0-beta.8",
     "@smui/ripple": "^7.0.0-beta.8",
-    "svelte2tsx": "^0.6.10"
+    "svelte2tsx": "^0.6.15"
   },
   "devDependencies": {
     "@tsconfig/svelte": "^4.0.1",
-    "sass": "^1.60.0",
-    "svelte-check": "^3.1.4",
+    "sass": "^1.63.4",
+    "svelte-check": "^3.4.3",
     "svelte-strip": "^2.0.0",
-    "tslib": "^2.5.0",
-    "typescript": "^5.0.3"
+    "tslib": "^2.5.3",
+    "typescript": "^5.1.3"
   }
 }
