fix: add declaration files to work around rollup typescript resolving modules to the src directory
Fixes #556

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -12,14 +12,17 @@
   },
   "typesVersions": {
     "*": {
-      "classadder": [
-        "./src/classadder/index.ts"
-      ],
-      "internal": [
-        "./src/internal/index.ts"
-      ],
       "*": [
         "./src/*"
+      ],
+      "classadder": [
+        "./src/classadder/index.d.ts"
+      ],
+      "internal": [
+        "./src/internal/index.d.ts"
+      ],
+      ".": [
+        "./src/index.d.js"
       ]
     }
   },
