--- a/packages/snackbar/package.json
+++ b/packages/snackbar/package.json
@@ -15,7 +15,10 @@
         "./src/*"
       ],
       "kitchen": [
-        "./src/kitchen/index.ts"
+        "./src/kitchen/index.d.ts"
+      ],
+      ".": [
+        "./src/index.d.js"
       ]
     }
   },
