--- a/packages/select/package.json
+++ b/packages/select/package.json
@@ -16,10 +16,13 @@
         "./src/*"
       ],
       "helper-text": [
-        "./src/helper-text/index.ts"
+        "./src/helper-text/index.d.ts"
       ],
       "icon": [
-        "./src/icon/index.ts"
+        "./src/icon/index.d.ts"
+      ],
+      ".": [
+        "./src/index.d.js"
       ]
     }
   },
